# PQ-BRAKE

./: CMakeLists.txt  Doxyfile  LICENSE.txt  Readme.md  common.h  install.sh  oqs_cpp.h  parameters.hpp
documentation/html/: 01__test__KEM_8cpp.html  02__test__OPRF_8cpp.html  03__test__PQBRAKE_8cpp.html  CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  Client_8cpp.html  Client_8hpp.html  Client_8hpp_source.html  Crypto_8cpp.html  Crypto_8hpp.html  Crypto_8hpp_source.html  Evaluator_8cpp.html  Evaluator_8hpp.html  Evaluator_8hpp_source.html  FJFXFingerprint_8cpp.html  FJFXFingerprint_8hpp.html  FJFXFingerprint_8hpp_source.html  Helpers_8cpp.html  Helpers_8hpp.html  Helpers_8hpp_source.html  Readme_8md.html  Server_8hpp.html  Server_8hpp_source.html  Thimble_8cpp.html  Thimble_8hpp.html  Thimble_8hpp_source.html  annotated.html  classClient-members.html  classClient.html  classEvaluator-members.html  classEvaluator.html  classFJFXFingerprint-members.html  classFJFXFingerprint.html  classServer-members.html  classServer.html  classes.html  classoqs_1_1KEMs-members.html  classoqs_1_1KEMs.html  classoqs_1_1KeyEncapsulation-members.html  classoqs_1_1KeyEncapsulation.html  (+47 more)
documentation/html/search/: all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  files_0.js  files_1.js  files_2.js  files_3.js  files_5.js  files_6.js  files_8.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+29 more)
fuzzyVault/: Thimble.cpp  Thimble.hpp
operations/: Crypto.cpp  Crypto.hpp  Helpers.cpp  Helpers.hpp
participants/: Client.cpp  Client.hpp  Evaluator.cpp  Evaluator.hpp  Server.hpp
tests/: 01_test_KEM.cpp  02_test_OPRF.cpp  03_test_PQBRAKE.cpp
tests/logs_template/: PQBRAKE_results.csv
tmp/: fjfx_all.h
